--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'eclipse'
 
 version = '1.0'
 group = 'org.lambdazation'
-archivesBaseName = 'modid'
+archivesBaseName = 'lambdazation'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
